--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.HomeScreenFragment">
-
+    tools:context=".fragments.home.HomeScreenFragment">
 
     <TextView
         android:id="@+id/textView"
@@ -22,29 +21,65 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/size_8"
         android:fontFamily="@font/montserrat_semibold"
-        android:text="Sun, 20 October 26 C"
+        android:text="Sun, 20 October 26°C"
         android:textColor="@color/white"
         android:textSize="@dimen/text_size_20"
-        android:layout_marginTop="@dimen/size_8"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-
     <ImageButton
         android:id="@+id/image_btn_drawer"
-        android:layout_width="@dimen/size_24"
-        android:layout_height="@dimen/size_24"
-        android:layout_margin="50dp"
-        android:src="@drawable/ic_up_arrow"
+        android:layout_width="@dimen/size_50"
+        android:layout_height="@dimen/size_50"
+        android:layout_margin="@dimen/size_12"
         android:background="@color/transparent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/ic_up_arrow"
+        android:scaleType="fitXY"
+        android:padding="@dimen/size_16"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <include
+            layout="@layout/item_app_icon"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <include
+            layout="@layout/item_app_icon"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <include
+            layout="@layout/item_app_icon"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <include
+            layout="@layout/item_app_icon"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
