--- a/app/src/main/res/layout/icon_title_item_layout.xml
+++ b/app/src/main/res/layout/icon_title_item_layout.xml
@@ -2,16 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:paddingBottom="@dimen/size_28">
-
+    android:orientation="horizontal"
+    android:layout_marginTop="@dimen/size_22">
 
     <ImageView
-        android:id="@+id/img_icon"
-        android:layout_width="@dimen/size_50"
-        android:layout_height="@dimen/size_50"
+        android:id="@+id/imgIcon"
+        android:layout_width="@dimen/size_40"
+        android:layout_height="@dimen/size_40"
         android:src="@mipmap/ic_launcher"/>
 
     <TextView
@@ -19,12 +16,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="WhatsApp"
-        android:layout_marginTop="@dimen/size_6"
-        android:textSize="@dimen/text_size_12"
+        android:textSize="@dimen/text_size_16"
         android:gravity="center"
-        android:maxLines="2"
+        android:maxLines="1"
+        android:layout_marginStart="@dimen/size_16"
         android:ellipsize="end"
+        android:layout_gravity="center"
         android:textColor="@color/white"
-        android:fontFamily="@font/montserrat_semibold"/>
+        android:fontFamily="@font/montserrat_medium"/>
+
 
 </LinearLayout>
