--- a/app/src/main/res/layout/fragment_app_drawer.xml
+++ b/app/src/main/res/layout/fragment_app_drawer.xml
@@ -10,51 +10,69 @@
         android:id="@+id/ll_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="@dimen/size_80"
         android:layout_marginHorizontal="@dimen/size_26"
+        android:layout_marginTop="@dimen/size_120"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <EditText
-            android:id="@+id/editText"
-            android:layout_width="match_parent"
+            android:id="@+id/searchEditText"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_search"
+            android:layout_weight="1"
             android:background="@drawable/rounded_bg"
-            android:hint="Search Apps"
+            android:drawableStart="@drawable/ic_search"
             android:drawablePadding="@dimen/size_16"
-            android:textColorHint="@color/grey_300"
-            android:paddingVertical="10dp"
+            android:hint="Search Apps"
+            android:maxLines="1"
             android:paddingHorizontal="@dimen/size_16"
-            android:layout_weight="1"/>
+            android:paddingVertical="10dp"
+            android:textColorHint="@color/grey_300"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/translucent"/>
 
         <ImageButton
             android:id="@+id/setting_btn"
             android:layout_width="@dimen/size_26"
             android:layout_height="@dimen/size_26"
-            android:src="@drawable/icon_settings"
             android:layout_gravity="center"
-            android:scaleType="centerCrop"
             android:layout_marginStart="@dimen/size_12"
-            android:background="@color/transparent"/>
+            android:background="@color/transparent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/icon_settings" />
 
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/apps_rv"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="@dimen/size_90"
         android:padding="@dimen/size_26"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        android:requiresFadingEdge="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintEnd_toStartOf="@+id/alphabet_index"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ll_search" />
+
+    <TextView
+        android:id="@+id/alphabet_index"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:gravity="center"
+        android:paddingHorizontal="@dimen/size_6"
+        android:paddingVertical="@dimen/size_15"
+        android:lineSpacingExtra="@dimen/size_2"
+        android:background="@drawable/widget_toggle_on_off"
+        android:textColor="@color/grey_200"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@+id/apps_rv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/apps_rv" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
