--- a/app/src/main/res/layout/item_app_icon.xml
+++ b/app/src/main/res/layout/item_app_icon.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:gravity="center"
+    android:gravity="center|top"
     android:paddingBottom="@dimen/size_28">
 
 
