--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -15,7 +15,7 @@
         android:fontFamily="@font/montserrat_semibold"
         android:text="12:59"
         android:textColor="@color/white"
-        android:textSize="@dimen/text_size_50"
+        android:textSize="@dimen/text_size_44"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,21 +25,51 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/size_8"
         android:fontFamily="@font/montserrat_medium"
-        android:text="Sun, 20 October 26°C"
+        android:text="Sun, 20 October"
         android:textColor="@color/white"
-        android:textSize="@dimen/text_size_20"
+        android:textSize="@dimen/text_size_18"
         app:layout_constraintStart_toStartOf="@+id/tv_clock"
         app:layout_constraintTop_toBottomOf="@+id/tv_clock" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewHomeApps"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/size_20"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/ll_add_home_apps"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/size_20"
+        android:layout_marginTop="@dimen/size_20"
+        android:background="@drawable/widget_card_bg"
+        android:backgroundTint="@color/secondaryCardColor"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:paddingHorizontal="@dimen/size_16"
+        android:paddingVertical="@dimen/size_4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewHomeApps">
+
+        <ImageView
+            android:layout_width="@dimen/size_18"
+            android:layout_height="@dimen/size_18"
+            android:src="@drawable/icon_plus" />
+
+        <TextView
+            style="@style/labelMedium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/size_8"
+            android:text="ADD APPS" />
+
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
