--- a/app/src/main/res/layout/icon_switch_setting_item.xml
+++ b/app/src/main/res/layout/icon_switch_setting_item.xml
@@ -4,10 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/rounded_bg"
-    android:padding="@dimen/size_16"
-    android:layout_marginBottom="@dimen/size_16"
-    android:layout_marginHorizontal="@dimen/size_16">
+    android:layout_marginBottom="@dimen/size_14">
 
     <ImageView
         android:id="@+id/leadingIcon"
@@ -29,18 +26,17 @@
         android:layout_marginStart="@dimen/size_8"
         android:fontFamily="@font/montserrat_medium"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/swOnOff"
+        app:layout_constraintEnd_toStartOf="@+id/selectCheckbox"
         app:layout_constraintStart_toEndOf="@+id/leadingIcon"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5" />
 
-    <com.google.android.material.materialswitch.MaterialSwitch
-        android:id="@+id/swOnOff"
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/selectCheckbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
