--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,14 @@
 
     <style name="Theme.MyLauncher" parent="Base.Theme.MyLauncher" />
 
+    <style name="numbersPicker" parent="Theme.AppCompat">
+        <item name="colorControlNormal">@color/grey_600</item>
+        <item name="background">@drawable/vertical_face_bg</item>
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="fontFamily">@font/montserrat_medium</item>
+        <item name="android:textSize">@dimen/text_size_16</item>
+    </style>
+
     <style name="primaryButtonStyle" parent="Widget.AppCompat.Button">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/size_56</item>
