--- a/app/src/main/res/layout/activity_special_apps.xml
+++ b/app/src/main/res/layout/activity_special_apps.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primaryCardColor"
-    tools:context=".activity.specialApps.SpecialAppsActivity">
+    tools:context=".specialApps.SpecialAppsActivity">
 
     <include
         android:id="@+id/toolbar"
