--- a/app/src/main/res/layout/bottom_sheet_app_settings.xml
+++ b/app/src/main/res/layout/bottom_sheet_app_settings.xml
@@ -15,8 +15,8 @@
 
         <ImageView
             android:id="@+id/img_icon"
-            android:layout_width="@dimen/size_30"
-            android:layout_height="@dimen/size_30"
+            android:layout_width="@dimen/size_28"
+            android:layout_height="@dimen/size_28"
             android:src="@mipmap/ic_launcher" />
 
         <TextView
@@ -29,7 +29,7 @@
             android:fontFamily="@font/montserrat_semibold"
             android:text="App label"
             android:textColor="@color/white"
-            android:textSize="@dimen/text_size_22" />
+            android:textSize="@dimen/text_size_20" />
 
         <ImageView
             android:id="@+id/image_close"
@@ -40,51 +40,20 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/ll_add_to_home"
-        android:layout_width="match_parent"
+    <include
+        android:id="@+id/option_add_remove_home_app"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/size_20"
-        android:layout_marginTop="@dimen/size_10"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="@dimen/size_24"
-            android:layout_height="@dimen/size_24"
-            android:src="@drawable/ic_home" />
-
-        <TextView
-            style="@style/headlineMedium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="@dimen/size_16"
-            android:text="Add to Home"
-            android:textColor="@color/white" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_app_info"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        layout="@layout/leading_icon_with_title_dialog_item"
         android:layout_marginHorizontal="@dimen/size_20"
-        android:layout_marginTop="@dimen/size_20"
-        android:orientation="horizontal">
+        android:layout_marginTop="@dimen/size_20"/>
 
-        <ImageView
-            android:layout_width="@dimen/size_24"
-            android:layout_height="@dimen/size_24"
-            android:src="@drawable/ic_info" />
-
-        <TextView
-            style="@style/headlineMedium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="@dimen/size_16"
-            android:text="App info"
-            android:textColor="@color/white" />
-    </LinearLayout>
-
+    <include
+        android:id="@+id/option_app_info"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        layout="@layout/leading_icon_with_title_dialog_item"
+        android:layout_marginHorizontal="@dimen/size_20"
+        android:layout_marginTop="@dimen/size_20"/>
 
 </LinearLayout>
