--- a/app/src/main/res/layout/dialog_select_time_limit.xml
+++ b/app/src/main/res/layout/dialog_select_time_limit.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,6 +11,7 @@
         android:layout_margin="@dimen/size_16"
         android:background="@drawable/rounded_bg"
         android:orientation="vertical"
+        android:padding="@dimen/size_16"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -22,10 +23,8 @@
             android:id="@+id/ll_app_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/size_16"
             android:gravity="center"
-            android:orientation="horizontal"
-            android:paddingHorizontal="@dimen/size_16">
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/img_icon"
@@ -42,7 +41,7 @@
                 android:layout_weight="1"
                 android:fontFamily="@font/montserrat_semibold"
                 android:text="App label"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="@dimen/text_size_18" />
 
         </LinearLayout>
@@ -51,12 +50,11 @@
             android:id="@+id/limit_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/size_16"
             android:layout_marginTop="@dimen/size_16"
-            android:fontFamily="@font/montserrat_light"
+            android:fontFamily="@font/montserrat_regular"
             android:gravity="center"
             android:text="Select the time that you intent to spend on this app."
-            android:textColor="@color/grey_200" />
+            android:textColor="@color/grey_800" />
 
         <NumberPicker
             android:id="@+id/time_picker"
@@ -66,7 +64,7 @@
             android:layout_marginStart="@dimen/size_40"
             android:layout_marginEnd="@dimen/size_40"
             android:background="@color/white"
-            android:backgroundTint="@color/primaryCardColor"
+            android:backgroundTint="@color/white"
             android:theme="@style/numbersPicker"
             android:visibility="gone"
             tools:visibility="visible"/>
@@ -86,30 +84,26 @@
                 android:id="@+id/tv_cancel"
                 style="@style/headlineMedium"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/size_40"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:paddingTop="@dimen/size_8"
-                android:paddingBottom="@dimen/size_16"
                 android:text="Cancel"
-                android:textColor="@color/white" />
-
-            <View
-                android:layout_width="@dimen/size_1"
-                android:layout_height="@dimen/size_20"
-                android:layout_gravity="center"
-                android:background="@color/grey_600" />
+                android:layout_marginEnd="@dimen/size_8"
+                android:background="@drawable/rounded_bg"
+                android:backgroundTint="@color/grey_50"
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/tv_done"
                 style="@style/headlineMedium"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/size_40"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:paddingTop="@dimen/size_8"
-                android:paddingBottom="@dimen/size_16"
                 android:text="Done"
+                android:layout_marginStart="@dimen/size_8"
+                android:background="@drawable/rounded_bg"
+                android:backgroundTint="@color/blue_500"
                 android:textColor="@color/white" />
 
         </LinearLayout>
