--- a/app/src/main/res/layout/leading_icon_with_title_dialog_item.xml
+++ b/app/src/main/res/layout/leading_icon_with_title_dialog_item.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/leadingIcon"
         android:layout_width="@dimen/size_24"
         android:layout_height="@dimen/size_24"
-        android:src="@drawable/ic_info" />
+        android:src="@drawable/ic_info"/>
 
     <TextView
         android:id="@+id/tv_title"
@@ -18,5 +19,5 @@
         android:layout_gravity="center"
         android:layout_marginStart="@dimen/size_16"
         android:text="App info"
-        android:textColor="@color/white" />
+        android:textColor="@color/black" />
 </LinearLayout>
