--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="black_200">#33000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00000000</color>
     <color name="translucent">#1EFFFFFF</color>
@@ -15,6 +16,8 @@
     <color name="grey_700">#6C7278</color>
     <color name="grey_800">#424242</color>
     <color name="grey_900">#131616</color>
+
+    <color name="blue_500">#0669fa</color>
 
     <color name="primaryCardColor">#22252a</color>
     <color name="secondaryCardColor">#1EFFFFFF</color>
