--- a/app/src/main/res/layout/fragment_featured_widget.xml
+++ b/app/src/main/res/layout/fragment_featured_widget.xml
@@ -11,7 +11,8 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/size_46"
+        android:layout_marginHorizontal="@dimen/size_24"
+        android:layout_marginTop="@dimen/size_60"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -22,7 +23,6 @@
             android:id="@+id/callender_widget"
             android:layout_width="match_parent"
             android:layout_height="@dimen/size_160"
-            android:layout_marginStart="@dimen/size_20"
             android:layout_marginEnd="@dimen/size_10"
             android:layout_weight="1"
             android:background="@drawable/glassmorphism_off"
@@ -51,65 +51,44 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/size_160"
             android:layout_marginStart="@dimen/size_10"
-            android:layout_marginEnd="@dimen/size_25"
             android:layout_weight="1"
             android:background="@drawable/widget_toggle_on_off"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="vertical">
 
             <ImageView
                 android:layout_width="@dimen/size_80"
                 android:layout_height="@dimen/size_80"
-                android:src="@drawable/ic_wallpaper"/>
+                android:src="@drawable/ic_wallpaper" />
 
+            <TextView
+                style="@style/headlineMedium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/text_size_12"
+                android:text="AUTO"
+                android:textColor="@color/white" />
         </LinearLayout>
-
 
     </LinearLayout>
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/study_mode_widget"
+    <LinearLayout
+        android:id="@+id/screen_time_widget"
         android:layout_width="match_parent"
         android:layout_height="@dimen/size_160"
-        android:layout_marginHorizontal="@dimen/size_25"
-        android:layout_marginTop="@dimen/size_16"
-        android:visibility="gone"
-        android:background="@drawable/widget_card_bg"
+        android:layout_marginHorizontal="@dimen/size_24"
+        android:layout_marginTop="@dimen/size_20"
+        android:layout_weight="1"
+        android:background="@drawable/widget_toggle_on_off"
+        android:gravity="center"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
-        <TextView
-            android:id="@+id/on_off_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="@dimen/size_25"
-            android:fontFamily="@font/montserrat_bold"
-            android:text="OFF"
-            android:textColor="@color/white"
-            android:textSize="@dimen/size_50"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
 
-
-        <ImageButton
-            android:id="@+id/study_mode_more"
-            android:layout_width="@dimen/size_52"
-            android:layout_height="@dimen/size_52"
-            android:layout_marginEnd="@dimen/size_25"
-            android:background="@drawable/rounded_bg"
-            android:padding="@dimen/size_8"
-            android:scaleX="-1"
-            android:src="@drawable/icon_back"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
