--- a/app/src/main/res/layout/toolbar_item.xml
+++ b/app/src/main/res/layout/toolbar_item.xml
@@ -14,7 +14,8 @@
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/white" />
 
     <TextView
         android:id="@+id/toolbar_title"
@@ -23,7 +24,7 @@
         android:fontFamily="@font/montserrat_semibold"
         android:gravity="center_vertical"
         android:text="@string/app_name"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="@dimen/text_size_22"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/toolbarIconMore"
