--- a/app/src/main/res/drawable/glassmorphism_on.xml
+++ b/app/src/main/res/drawable/glassmorphism_on.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="@dimen/size_20"/>
+    <corners android:radius="@dimen/size_16"/>
     <gradient android:startColor="@color/translucent"
         android:endColor="@color/transparent"
         android:type="linear"
         android:angle="1"/>
 
-    <stroke android:width="@dimen/size_1" android:color="@color/white"/>
+    <stroke android:width="0.5dp" android:color="@color/white"/>
 
 </shape>
